@@ -48,6 +48,9 @@ Core and Builtins
 Library
 -------
 
+- Silence the DeprecationWarning raised when importing mimetools in
+  BaseHTTPServer.
+
 - Issue #2776: fixed small issue when handling an URL with double slash
   after a 302 response in the case of not going through a proxy.
 
